2007-03-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	The order of the dialogbox buttons should be [close, add].

2007-03-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Johan Dahlin <jdahlin@async.com.br>

	* pitivi/ui/sourcefactories.py:
	HIG fixes.
	Switch the explanation message from a gtk.TextView to a gtk.Label,
	in order to avoid issues with text selections.

2007-03-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	* pitivi/pitivigstutils.py:
	Import pitivi gst utils explicitely.

2007-03-18  Johan Dahlin  <jdahlin@async.com.br>

	* pitivi/ui/sourcefactories.py: Modernize the usage of
	treemodel and use enums to access the columns.

2007-03-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/timeline/composition.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/viewer.py:
	Remove unused imports, detected by pyflakes.

2007-03-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/elements/singledecodebin.py:
	* pitivi/elements/smartscale.py:
	* pitivi/instance.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/signalgroup.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	* pitivi/timeline/timeline.py:
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/glade.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/plumber.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py: