@@ -1,5 +1,12 @@
 2007-03-25  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/pitivi.py:
+	Add an option for ui-less pitivi. Needed for unit-testing.
+	* pitivi/timeline/source.py:
+	Remove cruft.
+
+2007-03-25  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/ui/sourcefactories.py:
 	The order of the dialogbox buttons should be [close, add].
 
